--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
         <title>Basic Calculator</title>
-        <script src="app.js"></script>
-        <link rel="stylesheet" href="style.css">
+        <script src="scripts/calculator.js"></script>
+        <link rel="stylesheet" href="styles/main.css">
         <meta name="viewport" content="width=device-width initial-scale=0">
         <meta charset="UTF-8">
     </head>
